--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <audio id="bgm" src="music/天天-陶喆.mp3" loop preload="auto"></audio>
 
   <!-- iframe 承载页面 -->
-  <iframe id="main-iframe" src="index.html"></iframe>
+  <iframe id="main-iframe" src="log.html"></iframe>
   <script>
       // 全局存储 audio 对象
     const audio = document.getElementById('bgm');
