--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -179,7 +179,7 @@
     <a href="javascript:void(0);" class="lk1" id="to-memories">
         <div class="link1">
             <div class="bt1">
-                我很喜欢
+                点这里往后看
             </div>
         </div>
     </a>
@@ -197,7 +197,7 @@
 	<a href="javascript:;" class="lk1">
         <div class="link2">
             <div class="bt1" id="dislike">
-                我不喜欢
+                这里不能点
             </div>
         </div>
 	</a>
