--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- 音乐播放器 -->
-  <audio id="bgm" src="music/天天-陶喆.mp3" loop preload="auto"></audio>
+  <audio id="bgm" src="music/无缘陶喆.mp3" loop preload="auto"></audio>
 
   <!-- iframe 承载页面 -->
   <iframe id="main-iframe" src="index.html"></iframe>
