--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			<h1>生日快乐</h1>
 
 			<form class="form">
-				<input id="userName" name="userName" type="text" placeholder="姓名">
-				<input id="pwd" name="pwd" type="password" placeholder="密码">
+				<input id="userName" name="userName" type="text" placeholder="请输入：tomatofish">
+				<input id="pwd" name="pwd" type="password" placeholder="请输入：0812">
 				<button type="submit" id="login-button">进入</button>
 				<script>
 				// 添加按钮点击事件
-				document.getElementById('login-button').addEventListener('click', function() {
+				document.getElementById('userName').addEventListener('click', function() {
 					// 通知父页面开始播放音乐并切换到下一个页面
 					window.parent.postMessage('startMusic', '*');
 				});
