--- a/Memories.html
+++ b/Memories.html
@@ -20,6 +20,7 @@
               <p class="ly-stxt02">这是一个提前的生日祝福</p>
               <p class="ly-stxt03">愿时光予你清澈如初，</p>
               <p class="ly-stxt03">岁月赠你温柔长驻。</p>
+              <p class="ly-stxt03">上一页有个番茄蛋糕不知道你能不能加载出来</p>
               <p class="ly-stxt04">目前还有点小bug，</p>
               <p class="ly-stxt05">不过暂时就这样吧</p>
             </div>
