--- a/Memories.html
+++ b/Memories.html
@@ -21,6 +21,7 @@
               <p class="ly-stxt03">愿时光予你清澈如初，</p>
               <p class="ly-stxt03">岁月赠你温柔长驻。</p>
               <p class="ly-stxt03">上一页有个番茄蛋糕不知道你能不能加载出来</p>
+              <p class="ly-stxt03">最好是用电脑打开,不过无所谓</p>
               <p class="ly-stxt04">目前还有点小bug，</p>
               <p class="ly-stxt05">不过暂时就这样吧</p>
             </div>
