--- a/Memories.html
+++ b/Memories.html
@@ -16,10 +16,8 @@
           <div class="ly-box01">
             <div class="ly-txt01">
               <p class="ly-stxt01">tomato fish，</p>
-              <p class="ly-stxt02">祝你21岁生日快乐</p>
-              <p class="ly-stxt02">这是一个提前的生日祝福</p>
-              <p class="ly-stxt03">愿时光予你清澈如初，</p>
-              <p class="ly-stxt03">岁月赠你温柔长驻。</p>
+              <p class="ly-stxt02">祝你21岁生日快乐,这是一个提前的生日祝福</p>
+              <p class="ly-stxt03">愿时光予你清澈如初，岁月赠你温柔长驻。</p>
               <p class="ly-stxt03">上一页有个番茄蛋糕不知道你能不能加载出来</p>
               <p class="ly-stxt03">最好是用电脑打开,不过无所谓</p>
               <p class="ly-stxt04">目前还有点小bug，</p>
