--- a/Memories.html
+++ b/Memories.html
@@ -42,11 +42,10 @@
                   201X-0X-1X
               </div> -->
               <div class="ly-txt01">
-                  <p>我知道这样有点傻</p>
+                  <p>我知道这样有点自作多情</p>
                   <p>但已经做了，我应该送给你</p>
-                  <p>不过我也确实没有动力继续做</p>
+                  <p>不过我也确实没有动力再继续做</p>
                   <p>等不到你生日那天</p>
-                  <p>我觉得我现在的状态出现了问题</p>
                   <p>所以差不多了</p>
               </div>
           </div>
